# NormAE

./: .gitignore  LICENSE  README.md  classification.py  cls.py  config.py  datasets.py  evaluation_ml.py  generate.py  log1023-2.txt  log1023.txt  main.py  metrics.py  networks.py  plot.py  plot_pca.py  predict.py  pyproject.toml  simulate.py  train.py  train.sh  trainAE.py  transfer.py  visual.py
deprecated/: config.py  datasets.py  train.py
example/: example_sample_info.csv  example_x.csv
src/normae/: __init__.py  __main__.py  cli.py  estimator.py  model.py  networks.py  train.py  utils.py
sundry/: trainAE.py
